--- a/css/style.css
+++ b/css/style.css
@@ -52,17 +52,56 @@ span {
 #wrap {
 	flex-wrap: wrap;
 	width: 100%;
-	max-width: 1272px;
+	max-width: 1280px;
 	height: 100vh;
 	margin: 0 auto;
 	/* background-color: antiquewhite; */
 }
 
-#app h1 {
-	text-align: center;
-	padding: 80px 0;
-	font-size: 30px;
-/*	background: #D9CED6;*/
+.ballet-heading {
+	font-family: "Ballet", cursive;
+	font-optical-sizing: auto;
+	font-weight: 400;
+	font-style: normal;
+}
+
+header {
+	position: relative;
+}
+
+h1 {
+	font-size: 40px;
+	position: absolute;
+	top: -80px;
+	right: 30px;
+}
+
+h2 {
+	font-size: 40px;
+	position: absolute;
+	top: -30px;
+	left: 10px;
+}
+
+.heading-bigger {
+	font-size: 80px;
+	padding-left: 30px;
+}
+
+#sideMenu {
+	width: 180px;
+}
+
+nav {
+	position: absolute;
+	top: 80px;
+	right: 30px;
+	font-size: 1.2rem;
+	/* background-color: blueviolet; */
+}
+
+.menuCont li{
+	padding: 0.6em 0.3em 0.5em;
 }
 
 main {
@@ -70,6 +109,7 @@ main {
 	height: 750px;
 	display: flex;
 	background-color: #fff;
+	margin: 100px 0 0 0;
 }
 
 #contentsWrap {
@@ -85,9 +125,10 @@ main {
 	/* background-color: #ff8; */
 	width: 20%;
 	height: 100%;
+	padding: 200px 0 0 0;
 }
 
- .item {
+.item {
 	width: 300px;
 	max-width: 300px;
 	padding: 20px 30px;
@@ -109,11 +150,11 @@ main {
   
 .item img {
 	max-width: 240px;
-	width: 180px;
+	width: 120px;
 }
 
 .item .itemTitle {
-	font-size: 1.5rem;
+	font-size: 1.0rem;
 	margin: 20px 50px 10px;
 }
 
@@ -122,8 +163,8 @@ main {
 	height: 100%;
 }
 
- #showArea {
-	padding:0 90px  200px 0 ;
+#showArea {
+	padding:180px 230px 200px 0 ;
 	width: 100%;
 	display: flex;
 	justify-content: center; /* 横方向中央 */
@@ -131,14 +172,15 @@ main {
 	height: 100%;            /* 親要素に高さがあることが前提です */
 }
 
+#showArea img {
+	width: 400px;
+}
+
 footer{
     position: absolute;
-    bottom: 0;
-	width: 100%;
-    height: 60px; /* 任意の高さ */
-    display: flex;
-    justify-content: center; /* 横中央 */
-    align-items: center;     /* 縦中央（footer内で） */
+	left: -300px;
+    bottom: 70px;
+	height: 60px; /* 任意の高さ */
 }
 
 footer .copyright {
@@ -148,38 +190,12 @@ footer .copyright {
 /* 
 graphicPage */
 
- #gshowArea {
+#gshowArea {
 	width: 100%;
 	display: flex;
 	justify-content: center; /* 横方向中央 */
 	align-items: center;     /* 縦方向中央 */
 	height: 100%;            /* 親要素に高さがあることが前提です */
-}
-
-/* 
-nav */
-
-#sideMenu {
-	width: 180px;
-	background: #D9CED6;
-	justify-content: center;
-	border-width: thin;
-	border-color: #000;
-	border-left-style: dashed;
-	padding: 80px 0 0 30px;
-	z-index: 2;
-}
-
-nav {
-	position: absolute;
-	top: 50vh;
-	right: -50px;
-	font-size: 1.2rem;
-	/* background-color: blueviolet; */
-}
-
-.menuCont li{
-	padding: 0.6em 0.3em 0.5em;
 }
 
 /* 
