--- a/css/style.css
+++ b/css/style.css
@@ -105,15 +105,30 @@ nav {
 
 main {
 	width: 100%;
-	height: 750px;
+	/* height: 750px; */
 	display: flex;
-	background-color: #fff;
+	/* background-color: #fff; */
 	margin: 150px 0 0 0 ;
 }
 
+    .fixed-box {
+      position: fixed;
+      top: 525px;
+      left: 50%;
+      transform: translate(-50%, -50%);
+	width: 1280px;
+	height: 750px;
+      background-color: white;
+      z-index: -1;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+    }
+
+
 #contentsWrap {
-	width: 100%;
-	height: 100%;
+	/* width: 100%; */
+	/* height: 100%; */
 	display: flex;
 	justify-content: center;
 	flex-wrap: wrap;
@@ -175,13 +190,9 @@ main {
 }
 
 footer{
-    position: relative;
-}
-
-footer p {
-	left: -300px;
-    bottom: 120px;
-	height: 60px; /* 任意の高さ */
+    position: absolute;
+	left: 0;
+    bottom: 0;
 }
 
 footer .copyright {
