--- a/css/style.css
+++ b/css/style.css
@@ -20,7 +20,7 @@ a:visited {
 }
 
 a:hover {
-	color: #4F0000;
+	color: #5b0d9f;
 }
 
 img {
@@ -84,6 +84,30 @@ h2 {
 
 h3 {
 	font-size: 30px;
+}
+
+.animated-heading {
+  position: relative;
+  display: inline-block;
+  z-index: 1;
+}
+
+.animated-heading::before {
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0.1em;
+  width: 100%;
+  height: 0.5em;
+  background: rgb(255, 253, 142); /* マーカー色 */
+  z-index: -1;
+  transform: scaleX(0);
+  transform-origin: left;
+  transition: transform 0.7s ease-out;
+}
+
+.animated-heading.visible::before {
+  transform: scaleX(1);
 }
 
 .heading-bigger {
