--- a/css/style.css
+++ b/css/style.css
@@ -69,21 +69,25 @@ header {
 }
 
 h1 {
-	font-size: 40px;
+	font-size: 2rem;
 	position: absolute;
 	top: -80px;
 	right: 30px;
 }
 
 h2 {
-	font-size: 40px;
+	font-size: 2.5rem;
 	position: absolute;
 	top: -30px;
 	left: 10px;
 }
 
 h3 {
-	font-size: 30px;
+	font-size:2rem;
+}
+
+h4 {
+	font-size: 28px;
 }
 
 .animated-heading {
@@ -464,18 +468,62 @@ graphicPage */
 }
 
 /* PC layout*/
-@media screen and (max-width:1271px) {
+@media screen and (max-width:1280px) {
 	
-	#sideMenu {
-		border: none;
+	.fixed-box {
+		width:80%;
+		height: 80%;;
 	}
+
 }
 
 /*tablet layout*/
-@media screen and (max-width:899px){
+@media screen and (max-width:820px){
 	
-	#contentsWrap .itemArea .itemGraphic{
-		border-right-style: none;
+	.contentArea {
+		/* background-color: #c586fb; */
+		width: 80%;
+		margin: 0 auto;
+
+	}
+
+	h3 {
+		margin: 0;
+	}
+
+	.thumbnailArea {
+		width: 500px;
+		display: flex;
+		flex-direction: column;
+		justify-content: center;
+		/* background-color: #5b0d9f; */
+		margin: 0 auto;
+	}
+
+	.thumbnailItem {
+		/* width: 100%; */
+		margin: 30px 0;
+				display: flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+
+	.thumbnailItem img {
+		width: 100%;
+	}
+
+	h4 {
+		padding: 0 50px 0 0 ;
+	}
+
+	.textArea {
+		flex-direction: column;
+		padding: 30px 0 ;
+	}
+
+	.description {
+		padding-top: 30px;
+		justify-content: center;
 	}
 
 }
@@ -483,39 +531,11 @@ graphicPage */
 /* mobile & tablet layout*/
 @media screen and (max-width:768px) {
 	
-	#contentsWrap {
-		justify-content: center;
-		flex-direction: column; /*itypeが段落ちしないため*/
-	}
-	
-	#contentsWrap #ityped {
-		width: 100%;
-		text-align: center;
-	}
 
-	#contentsWrap .itemArea{
-		justify-content: center;
-	}
-	
-	#contentsWrap .itemArea .item {
-		width: 300px;
-		justify-content: center;
-		text-align: center;
-	}
-
-	#contentsWrap .item .itemTitle {
-		margin: 20px 0 10px;
-	}
 
 }
 
 /* mobile & tablet layout*/
 @media screen and (max-width:599px) {
-	#contentsWrap .itemArea .itemGraphic{
-		border-width: thin;
-		border-color: #4F0000;
-		border-top-style:dashed;
-		border-bottom-style:dashed;
-		border-left-style:none;
-	}
+
 }
