--- a/css/style.css
+++ b/css/style.css
@@ -480,17 +480,66 @@ graphicPage */
 /*tablet layout*/
 @media screen and (max-width:820px){
 
+	.showArea {
+		margin: 0 auto;
+		padding-top: 100px;
+	}
+
+	.slider {
+		position: relative;
+	}
+
 	.responsive-slider{
 		display: flex !important;
 		justify-content: center;
 	}
-		
 	
-
-
 	.slick-track {
-		background-color: #5b0d9f;
+		/* background-color: #5b0d9f; */
 		margin: 0 auto;
+		width: 100%;
+	}
+
+		/* ドットを画像の真下に表示 */
+	.slick-dots {
+		position: absolute;
+		bottom:-50px;   /* 下からの距離を調整 */
+		left: 50%;
+		transform: translateX(-50%);
+		display: flex !important;
+		justify-content: center;
+		padding: 0;
+		margin: 0;
+		list-style: none;
+	}
+
+	.slick-dots li button {
+		font-size: 0; /* 数字の非表示 */
+	}
+
+	.slick-dots li button {
+		border: none;         /* 枠線を消す */
+		outline: none;        /* キーボード操作時の青い枠を消す */
+		box-shadow: none;     /* 影があれば消す */
+		background: transparent; /* 背景リセット（必要なら） */
+		padding: 5px;
+		margin: 0;
+		cursor: pointer;
+	}
+
+
+	.slick-dots li button::before {
+		content: '';
+		width: 10px;
+		height: 10px;
+		background-color: #ccc;
+		border-radius: 50%;
+		display: block;
+	}
+
+	.slick-dots li.slick-active button::before {
+		background-color: #333;
+		opacity: 1;
 	}
 
 	.responsive-slider img {
@@ -505,10 +554,8 @@ graphicPage */
 	}
 	
 	.contentArea {
-		/* background-color: #c586fb; */
 		width: 80%;
 		margin: 0 auto;
-
 	}
 
 	h3 {
@@ -527,7 +574,7 @@ graphicPage */
 	.thumbnailItem {
 		/* width: 100%; */
 		margin: 30px 0;
-				display: flex;
+		display: flex;
 		flex-direction: column;
 		justify-content: center;
 	}
