--- a/css/style.css
+++ b/css/style.css
@@ -2,92 +2,91 @@
 /* base
 ================================ */
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	color: #303437;
-	font-family: YuMincho, "Yu Mincho", "Hiragino Mincho ProN", "serif";
-	position: relative;
-	line-height: 1.5;
-	min-height: 100vh;
+  color: #303437;
+  font-family: YuMincho, 'Yu Mincho', 'Hiragino Mincho ProN', 'serif';
+  position: relative;
+  line-height: 1.5;
+  min-height: 100vh;
 }
 
 a:link,
 a:visited {
-	color: #303437;
-	text-decoration: none;
+  color: #303437;
+  text-decoration: none;
 }
 
 a:hover {
-	color: #5b0d9f;
+  color: #5b0d9f;
 }
 
 img {
-	max-width: 100%;
-	height: auto;
-	vertical-align: bottom;
+  max-width: 100%;
+  height: auto;
+  vertical-align: bottom;
 }
 
 span {
-	display: block;
+  display: block;
 }
 
 #pageTop {
-	display: none;
-	position: fixed;
-	bottom: 20px;
-	right: 20px;
-	width: 30px;
+  display: none;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  width: 30px;
 }
 
 /* drawer */
 #drawer-checkbox {
-	display: none;
+  display: none;
 }
-
 
 /* layout
 ================================ */
 
 #wrap {
-	flex-wrap: wrap;
-	width: 100%;
-	max-width: 1280px;
-	min-height: 100vh;
-	margin: 0 auto;
+  flex-wrap: wrap;
+  width: 100%;
+  max-width: 1280px;
+  min-height: 100vh;
+  margin: 0 auto;
 }
 
 .ballet-heading {
-	font-family: "Ballet", cursive;
-	font-optical-sizing: auto;
-	font-style: normal;
+  font-family: 'Ballet', cursive;
+  font-optical-sizing: auto;
+  font-style: normal;
 }
 
 header {
-	position: relative;
+  position: relative;
 }
 
 h1 {
-	font-size: 2rem;
-	position: absolute;
-	top: -80px;
-	right: 30px;
+  font-size: 2rem;
+  position: absolute;
+  top: -80px;
+  right: 30px;
 }
 
 h2 {
-	font-size: 2.5rem;
-	position: absolute;
-	top: -30px;
-	left: 10px;
+  font-size: 2.5rem;
+  position: absolute;
+  top: -30px;
+  left: 10px;
 }
 
 h3 {
-	font-size:2rem;
+  font-size: 2rem;
 }
 
 h4 {
-	font-size: 28px;
+  font-size: 28px;
 }
 
 .animated-heading {
@@ -97,7 +96,7 @@ h4 {
 }
 
 .animated-heading::before {
-  content: "";
+  content: '';
   position: absolute;
   left: 0;
   bottom: 0.1em;
@@ -115,529 +114,517 @@ h4 {
 }
 
 .heading-bigger {
-	font-size: 80px;
-	padding-left: 30px;
+  font-size: 80px;
+  padding-left: 30px;
 }
 
 #sideMenu {
-	width: 180px;
+  width: 180px;
 }
 
 nav {
-	position: absolute;
-	top: 80px;
-	right: 30px;
-	font-size: 1.2rem;
-	/* background-color: blueviolet; */
+  position: absolute;
+  top: 80px;
+  right: 30px;
+  font-size: 1.2rem;
+  /* background-color: blueviolet; */
 }
 
-.menuCont li{
-	padding: 0.6em 0.3em 0.5em;
+.menuCont li {
+  padding: 0.6em 0.3em 0.5em;
 }
 
 main {
-	width: 100%;
-	height: 100%;
-	display: flex;
-	margin: 150px 0 0 0 ; /* h1とnavの位置 */
+  width: 100%;
+  height: 100%;
+  display: flex;
+  margin: 150px 0 0 0; /* h1とnavの位置 */
 }
 
 .fixed-box {
-	position: fixed;
-	top: 525px;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	width: 1280px;
-	height: 750px;
-	background-color: white;
-	z-index: -1;
-	display: flex;
-	align-items: center;
-	justify-content: center;
+  position: fixed;
+  top: 525px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 1280px;
+  height: 750px;
+  background-color: white;
+  z-index: -1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
-
 #contentsWrap {
-	width: 100%;
-	display: flex;
-	justify-content: center;
-	flex-direction: column;  
-	gap: 10px; 
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 10px;
 }
 
 .firstviewArea,
-.contentArea
- {
-	width: 100%;
-	margin: 0 0 180px 0;
-	/* background-color: cadetblue; */
+.contentArea {
+  width: 100%;
+  margin: 0 0 180px 0;
+  /* background-color: cadetblue; */
 }
 
 .firstviewArea {
-	display: flex;
+  display: flex;
 }
 
-
 .top-thumbnailArea {
-	width: 20%;
-	height: 100%;
-	padding: 200px 0 0 0;
+  width: 20%;
+  height: 100%;
+  padding: 200px 0 0 0;
 }
 
 .item {
-	width: 300px;
-	max-width: 300px;
-	padding: 20px 30px;
-	text-align: center;
+  width: 300px;
+  max-width: 300px;
+  padding: 20px 30px;
+  text-align: center;
 }
 
 /* 初期状態（非表示＋右にオフセット） */
 .gitem {
-	opacity: 0;
-	transform: translateX(50px);
-	transition: all 0.8s ease-out;
+  opacity: 0;
+  transform: translateX(50px);
+  transition: all 0.8s ease-out;
 }
-  
+
 /* 表示時の状態 */
 .gitem.animate {
-	opacity: 1;
-	transform: translateX(0);
+  opacity: 1;
+  transform: translateX(0);
 }
-  
+
 .item img {
-	max-width: 240px;
-	width: 120px;
+  max-width: 240px;
+  width: 120px;
 }
 
 .item .itemTitle {
-	font-size: 1.0rem;
-	margin: 20px 50px 10px;
+  font-size: 1rem;
+  margin: 20px 50px 10px;
 }
 
 .showArea {
-	width: 80%;
-	height: 100%;
+  width: 80%;
+  height: 100%;
 }
 
 #showArea {
-	padding:180px 230px 200px 0 ;
-	width: 100%;
-	display: flex;
-	justify-content: center; /* 横方向中央 */
-	align-items: center;     /* 縦方向中央 */
-	height: 100%;            /* 親要素に高さがあることが前提です */
+  padding: 180px 230px 200px 0;
+  width: 100%;
+  display: flex;
+  justify-content: center; /* 横方向中央 */
+  align-items: center; /* 縦方向中央 */
+  height: 100%; /* 親要素に高さがあることが前提です */
 }
 
 #showArea img {
-	width: 400px;
+  width: 400px;
 }
 
 h3 {
-	margin: 0 0 0 80px;
+  margin: 0 0 0 80px;
 }
 
 .thumbnailArea {
-	display: flex;
-	justify-content: center; 
+  display: flex;
+  justify-content: center;
 }
 
-.thumbnailItem{
-	margin: 40px 50px;
-	transition: transform 0.3s ease, box-shadow 0.3s ease;
+.thumbnailItem {
+  margin: 40px 50px;
+  transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
 .thumbnailItem:hover {
-	transform: translateY(-10px);
+  transform: translateY(-10px);
+}
+
+.thumbnailItem a img {
+  width: 250px;
+}
+
+.thumbnailTitle {
+  font-size: 1.4rem;
 }
 
 /* 
 About Me*/
 
 .resumeContainer {
-	width: 100%;
-	padding:  50px 0;	
-	display: grid;
-	grid-template-columns: max-content;
-	gap: 30px; 	
-	justify-content: center;
-	/* background-color: darkgrey; */
+  width: 100%;
+  padding: 50px 0;
+  display: grid;
+  grid-template-columns: max-content;
+  gap: 30px;
+  justify-content: center;
+  /* background-color: darkgrey; */
 }
 
 .textArea {
-	display: flex;
-	align-items: center; 
-	/* background-color: bisque; */
+  display: flex;
+  align-items: center;
+  /* background-color: bisque; */
 }
 
 .circle-heading {
-	width: 120px;
-	height: 120px;
-	border-radius: 50%;
-	display: flex;
-	align-items: center;       /* 縦中央揃え */
-	justify-content: center;   /* 横中央揃え */
-	font-size: 18px;
-	margin: 0 40px ;
-	text-align: center;
-	background-color: #c586fb; /* メインカラー（青紫系） */
-	color: #ffffff;   
-
+  width: 120px;
+  height: 120px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center; /* 縦中央揃え */
+  justify-content: center; /* 横中央揃え */
+  font-size: 18px;
+  margin: 0 40px;
+  text-align: center;
+  background-color: #c586fb; /* メインカラー（青紫系） */
+  color: #ffffff;
 }
 
 .description {
-	width: 80%;
-	text-align: left;
-	display: flex;
-	align-items: center; 
+  width: 80%;
+  text-align: left;
+  display: flex;
+  align-items: center;
 }
 
 /* 
 footer */
 
-footer{
-    position: absolute;
-	left: 0;
-    bottom: 0;
+footer {
+  position: absolute;
+  left: 0;
+  bottom: 0;
 }
 
 footer .copyright {
-	font-size: 0.9rem;
+  font-size: 0.9rem;
 }
 
 /* 吹き出し */
 
 .gitem {
-	position: relative;
-	display: inline-block;
+  position: relative;
+  display: inline-block;
 }
 
 .tooltip {
-	display: none;
-	position: absolute;
-	top: 30%; /* アイテムの横に表示 */
-	left: -10%;
-	transform: translateX(-50%);
-	background-color: #c586fb;
-	color: #fff;
-	padding: 8px 12px;
-	border-radius: 6px;
-	white-space: nowrap;
-	font-size: 14px;
-	z-index: 10;
-	pointer-events: none; /* 吹き出しの上にマウスが乗っても無視 */
+  display: none;
+  position: absolute;
+  top: 30%; /* アイテムの横に表示 */
+  left: -10%;
+  transform: translateX(-50%);
+  background-color: #c586fb;
+  color: #fff;
+  padding: 8px 12px;
+  border-radius: 6px;
+  white-space: nowrap;
+  font-size: 14px;
+  z-index: 10;
+  pointer-events: none; /* 吹き出しの上にマウスが乗っても無視 */
 }
 
 .gitem:hover .tooltip {
-	display: block;
+  display: block;
 }
 
 /* 
 graphicPage */
 
 #gshowArea {
-	width: 100%;
-	display: flex;
-	justify-content: center; /* 横方向中央 */
-	align-items: center;     /* 縦方向中央 */
-	height: 100%;            /* 親要素に高さがあることが前提です */
+  width: 100%;
+  display: flex;
+  justify-content: center; /* 横方向中央 */
+  align-items: center; /* 縦方向中央 */
+  height: 100%; /* 親要素に高さがあることが前提です */
 }
-
-
-
 
 /*drawer layout*/
-@media screen and (max-width:1271px) {
-	
-	#wrap {
-		max-width: 1271px;
-	}
-	
-	main {
-		display: block;
-	}
-	
-	/* drawer */
-	#drawer-icon {
-		display: inline-block;
-		position: fixed;
-		right: 0;
-		top: 0;
-		width: 50px;
-		height: 50px;
-		cursor: pointer;
-		z-index: 300;
-	}
+@media screen and (max-width: 1271px) {
+  #wrap {
+    max-width: 1271px;
+  }
 
-	#drawer-icon span {
-		position: absolute;
-		left: 7px;
-		top: 24px;
-		width: 36px;
-		height: 2px;
-		border-radius: 4px;
-		background: #333;
-	}
-	
-	#drawer-icon span:before,
-	#drawer-icon span:after {
-		position: absolute;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		background: #333;
-		border-radius: 4px;
-		content: "";
-	}
+  main {
+    display: block;
+  }
 
-	#drawer-icon span:before {
-		top: -12px;
-	}
+  /* drawer */
+  #drawer-icon {
+    display: inline-block;
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 50px;
+    height: 50px;
+    cursor: pointer;
+    z-index: 300;
+  }
 
-	#drawer-icon span:after {
-		top: 12px;
-	}
+  #drawer-icon span {
+    position: absolute;
+    left: 7px;
+    top: 24px;
+    width: 36px;
+    height: 2px;
+    border-radius: 4px;
+    background: #333;
+  }
 
-	#drawer-checkbox:checked ~ #drawer-icon span {
-		background: rgba(51,51,51,0);
-		transition: all 0.3s ease-in-out;
-	}
+  #drawer-icon span:before,
+  #drawer-icon span:after {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: #333;
+    border-radius: 4px;
+    content: '';
+  }
 
-	#drawer-checkbox:checked ~ #drawer-icon span:before,
-	#drawer-checkbox:checked ~ #drawer-icon span:after {
-		top: 0;
-	}
+  #drawer-icon span:before {
+    top: -12px;
+  }
 
-	#drawer-checkbox:checked ~ #drawer-icon span:before {
-		transform: rotate(-45deg);
-	}
+  #drawer-icon span:after {
+    top: 12px;
+  }
 
-	#drawer-checkbox:checked ~ #drawer-icon span:after {
-		transform: rotate(45deg);
-	}
+  #drawer-checkbox:checked ~ #drawer-icon span {
+    background: rgba(51, 51, 51, 0);
+    transition: all 0.3s ease-in-out;
+  }
 
-	#gNavi {
-		position: fixed;
-		right:0;
-		top:0;
-		width: 200px;
-		height: 100%;
-		padding: 100px 0 0 30px;
-		z-index: 200;
-		transform: translateX(100%);
-		transition: all 0.3s ease-in-out, 0s;
-	}
-	
-	#gNavi ul {
-		margin: 0 auto;
-	}
-	
-	#drawer-checkbox:checked ~ #gNavi {
-		background: white;
-		box-shadow: 6px 0 25px rgba(0,0,0,0.16);
-		transform: translateX(0);
-		transition: all 0.3s ease-in-out;
-	}
+  #drawer-checkbox:checked ~ #drawer-icon span:before,
+  #drawer-checkbox:checked ~ #drawer-icon span:after {
+    top: 0;
+  }
 
-	#drawer-close {
-		display: none;
-		position: fixed;
-		left: 0;
-		top: 0;
-		width: 100%;
-		height: 100%;
-		background: rgba(0,0,0,0);
-		z-index: 100;
-		transition: all 0.3s ease-in-out, 0s;
-	}
+  #drawer-checkbox:checked ~ #drawer-icon span:before {
+    transform: rotate(-45deg);
+  }
 
-	#drawer-checkbox:checked ~ #drawer-close {
-		display: block;
-		background: rgba(0,0,0,0.3);
-	}
-	
+  #drawer-checkbox:checked ~ #drawer-icon span:after {
+    transform: rotate(45deg);
+  }
+
+  #gNavi {
+    position: fixed;
+    right: 0;
+    top: 0;
+    width: 200px;
+    height: 100%;
+    padding: 100px 0 0 30px;
+    z-index: 200;
+    transform: translateX(100%);
+    transition: all 0.3s ease-in-out, 0s;
+  }
+
+  #gNavi ul {
+    margin: 0 auto;
+  }
+
+  #drawer-checkbox:checked ~ #gNavi {
+    background: white;
+    box-shadow: 6px 0 25px rgba(0, 0, 0, 0.16);
+    transform: translateX(0);
+    transition: all 0.3s ease-in-out;
+  }
+
+  #drawer-close {
+    display: none;
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0);
+    z-index: 100;
+    transition: all 0.3s ease-in-out, 0s;
+  }
+
+  #drawer-checkbox:checked ~ #drawer-close {
+    display: block;
+    background: rgba(0, 0, 0, 0.3);
+  }
 }
 
 /* PC layout*/
-@media screen and (min-width:1272px) {
-	
-	header h1 img {
-		margin-right: 180px;
-	}
-	
+@media screen and (min-width: 1272px) {
+  header h1 img {
+    margin-right: 180px;
+  }
 }
 
 /* PC layout*/
-@media screen and (max-width:1280px) {
-	
-	.fixed-box {
-		width:80%;
-		height: 80%;;
-	}
-
+@media screen and (max-width: 1280px) {
+  .fixed-box {
+    width: 80%;
+    height: 80%;
+  }
 }
 
 /*tablet layout*/
-@media screen and (max-width:820px){
+@media screen and (max-width: 820px) {
+  h1 {
+    color: #707070;
+  }
 
-	h1 {
-		color: #707070;
-	}
+  h2 {
+    font-size: 2rem;
+  }
 
-	h2 {
-		font-size: 2rem;
-	}
+  .showArea {
+    margin: 0 auto;
+    padding-top: 100px;
+  }
 
-	.showArea {
-		margin: 0 auto;
-		padding-top: 100px;
-	}
+  .slider {
+    position: relative;
+  }
 
-	.slider {
-		position: relative;
-	}
+  .responsive-slider {
+    display: flex !important;
+    justify-content: center;
+  }
 
-	.responsive-slider{
-		display: flex !important;
-		justify-content: center;
-	}
-	
-	.slick-track {
-		/* background-color: #5b0d9f; */
-		margin: 0 auto;
-		width: 100%;
-	}
+  .slick-track {
+    /* background-color: #5b0d9f; */
+    margin: 0 auto;
+    width: 100%;
+  }
 
-		/* ドットを画像の真下に表示 */
-	.slick-dots {
-		position: absolute;
-		bottom:-50px;   /* 下からの距離を調整 */
-		left: 50%;
-		transform: translateX(-50%);
-		display: flex !important;
-		justify-content: center;
-		padding: 0;
-		margin: 0;
-		list-style: none;
-	}
+  /* ドットを画像の真下に表示 */
+  .slick-dots {
+    position: absolute;
+    bottom: -50px; /* 下からの距離を調整 */
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex !important;
+    justify-content: center;
+    padding: 0;
+    margin: 0;
+    list-style: none;
+  }
 
-	.slick-dots li button {
-		font-size: 0; /* 数字の非表示 */
-	}
+  .slick-dots li button {
+    font-size: 0; /* 数字の非表示 */
+  }
 
-	.slick-dots li button {
-		border: none;         /* 枠線を消す */
-		outline: none;        /* キーボード操作時の青い枠を消す */
-		box-shadow: none;     /* 影があれば消す */
-		background: transparent; /* 背景リセット（必要なら） */
-		padding: 5px;
-		margin: 0;
-		cursor: pointer;
-	}
+  .slick-dots li button {
+    border: none; /* 枠線を消す */
+    outline: none; /* キーボード操作時の青い枠を消す */
+    box-shadow: none; /* 影があれば消す */
+    background: transparent; /* 背景リセット（必要なら） */
+    padding: 5px;
+    margin: 0;
+    cursor: pointer;
+  }
 
+  .slick-dots li button::before {
+    content: '';
+    width: 10px;
+    height: 10px;
+    background-color: #ccc;
+    border-radius: 50%;
+    display: block;
+  }
 
-	.slick-dots li button::before {
-		content: '';
-		width: 10px;
-		height: 10px;
-		background-color: #ccc;
-		border-radius: 50%;
-		display: block;
-	}
+  .slick-dots li.slick-active button::before {
+    background-color: #333;
+    opacity: 1;
+  }
 
-	.slick-dots li.slick-active button::before {
-		background-color: #333;
-		opacity: 1;
-	}
+  .responsive-slider img {
+    width: 100%;
+    max-width: 400px;
+    display: block;
+    margin: 0 auto;
+  }
 
-	.responsive-slider img {
-		width: 100%;
-		max-width: 400px;
-		display: block;
-		margin: 0 auto;
-	}
+  .top-thumbnailArea {
+    display: none;
+  }
 
-	.top-thumbnailArea {
-		display: none;
-	}
-	
-	.contentArea {
-		width: 80%;
-		margin: 0 auto;
-	}
+  .contentArea {
+    width: 80%;
+    margin: 0 auto;
+  }
 
-	h3 {
-		margin: 0;
-	}
+  h3 {
+    margin: 0;
+  }
 
-	.thumbnailArea {
-		width: 500px;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-		/* background-color: #5b0d9f; */
-		margin: 0 auto;
-	}
+  .thumbnailArea {
+    width: 500px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    /* background-color: #5b0d9f; */
+    margin: 0 auto;
+  }
 
-	.thumbnailItem {
-		/* width: 100%; */
-		margin: 30px 0;
-		display: flex;
-		flex-direction: column;
-		justify-content: center;
-	}
+  .thumbnailItem {
+    /* width: 100%; */
+    margin: 30px 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+  }
 
-	.thumbnailItem img {
-		width: 100%;
-	}
+  .thumbnailItem img {
+    width: 100%;
+  }
 
-	h4 {
-		padding: 0 50px 0 0 ;
-	}
+  h4 {
+    padding: 0 50px 0 0;
+  }
 
-	.textArea {
-		flex-direction: column;
-		padding: 30px 0 ;
-	}
+  .textArea {
+    flex-direction: column;
+    padding: 30px 0;
+  }
 
-	.description {
-		padding-top: 30px;
-		justify-content: center;
-	}
-
+  .description {
+    padding-top: 30px;
+    justify-content: center;
+  }
 }
 
 /* mobile & tablet layout*/
-@media screen and (max-width:624px) {
+@media screen and (max-width: 624px) {
+  h2 {
+    font-size: 1.5rem;
+  }
 
-	h2 {
-		font-size: 1.5rem;
-	}
+  h3 {
+    font-size: 1.4rem;
+  }
 
-	h3 {
-		font-size: 1.4rem;
-	}
+  h4 {
+    font-size: 1.1rem;
+  }
 
-	h4 {
-		font-size: 1.1rem;
-	}
+  .thumbnailArea {
+    width: 80%;
+  }
 
-	.thumbnailArea {
-		width: 80%;
-	}
+  .textArea {
+    width: 350px;
+  }
 
-	.textArea {
-		width: 350px;
-	}
-
-	.shortDescription {
-		text-align: center;
-	}
-
+  .shortDescription {
+    text-align: center;
+  }
 }
 
 /* mobile & tablet layout*/
-@media screen and (max-width:599px) {
-	
-
+@media screen and (max-width: 599px) {
 }
