--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -112,12 +112,11 @@ h1.ballet-heading {
 }
 
 .fixed-box {
-  width: 400px;
-  height: 750px;
   background-color: white;
   border-radius: 70px;
   border: solid #666666 2px;
-
+  width: 400px;
+  height: 750px;
   position: fixed;
   top: 450px;
   left: 50%;
@@ -126,6 +125,31 @@ h1.ballet-heading {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+#contentsWrap {
+  width: 380px;
+  margin: 0 auto;
+}
+
+.contentsArea {
+  background-color: antiquewhite;
+  width: 100%;
+  padding: 40px 0;
+}
+
+.contentsHeading {
+  background-color: #75d895;
+  border-radius: 80px;
+  width: 100px;
+  height: 30px;
+  text-align: center;
+  line-height: 30px;
+  margin: 0 auto;
+}
+
+.thumbnailItem {
+  display: flex;
 }
 
 .thumbnailImage {
