--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -27,6 +27,20 @@ a:hover {
   color: #5b0d9f;
 }
 
+.border {
+  border-top: solid #666666 1px;
+  border-bottom: solid #666666 1px;
+  padding: 20px 0;
+}
+
+.tag-btn {
+  border-radius: 80px;
+  border: solid #666666 2px;
+  text-align: center;
+  padding: 5px 8px;
+  margin: 5px;
+}
+
 img {
   max-width: 100%;
   height: auto;
@@ -66,10 +80,8 @@ header {
   width: 100px;
   height: 40px;
   background-color: white;
-  border-radius: 80px;
-  border: solid #666666 2px;
-  text-align: center;
   line-height: 35px;
+  padding: 0;
 
   position: absolute;
   top: 50px;
@@ -149,24 +161,18 @@ h1.ballet-heading {
   margin-bottom: 20px;
 }
 
-.thumbnailItem {
-  border-top: solid #666666 1px;
-  border-bottom: solid #666666 1px;
-  display: flex;
-  justify-content: center;
-  padding: 20px 0;
-}
-
 .thumbnailImage {
   border: dotted #666666 1px;
-  width: 300px;
-  margin: 0 0 20px 0;
+  width: 80%;
+  margin: 0 auto;
+  margin-bottom: 20px;
 }
 
 .thumbnailText {
   border-left: solid #666666 2px;
   width: 100%;
   padding: 0 10px;
+  /* justify-content: left; */
 }
 
 .thumbnailTitle {
@@ -188,11 +194,15 @@ h1.ballet-heading {
   align-items: center;
 }
 
-.modalContent {
+.modalBox {
   background-color: #fff;
   border-radius: 30px;
   width: 400px;
   padding: 20px;
+}
+
+.modalContent {
+  padding: 30px 0;
 }
 
 .modalTagArea {
@@ -200,10 +210,22 @@ h1.ballet-heading {
 }
 
 .tag {
-  border-radius: 3px;
+  display: inline-block;
+  border-radius: 50px;
   background-color: #e4afbe;
-  width: 70px;
+  /* width: 70px; */
   text-align: center;
+  padding: 5px 8px;
+  margin: 5px;
+}
+
+.link {
+  display: inline-block;
+  background-color: #c0afe4;
+  /* width: 70px; */
+  text-align: center;
+  padding: 5px 8px;
+  margin: 5px;
 }
 
 #pageTop {
