--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -209,7 +209,27 @@ h1.ballet-heading {
   width: 400px;
   max-height: 650px;
   padding: 20px;
+  overflow: scroll;
+  -ms-overflow-style: none;
+  scrollbar-width: none;
 }
+
+/* モーダルのスクロールバー非表示 */
+
+/* （Edge・Firefox） */
+
+.modalBox {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* （Chrome・Safari） */
+
+.modalBox::-webkit-scrollbar {
+  display: none;
+}
+
+/* ============ */
 
 .modalContent {
   padding: 30px 0;
@@ -219,12 +239,6 @@ h1.ballet-heading {
   border-left: solid #666666 3px;
   font-size: 1.3rem;
   margin: 0 0 30px 15px;
-}
-
-.modalDescription {
-  padding: 30px 0;
-  width: 90%;
-  margin: 0 auto;
 }
 
 .modalTagArea {
@@ -254,10 +268,9 @@ h1.ballet-heading {
   margin: 5px;
 }
 
-.scroll {
+/* .scroll {
   text-align: center;
   position: relative;
-  /* display: inline-block; */
 }
 
 .scroll::after {
@@ -270,6 +283,18 @@ h1.ballet-heading {
   top: 100%;
   left: 50%;
   transform: translate(-50%);
+} */
+
+.modalDescription1 {
+  padding: 30px 0 0 0;
+  width: 90%;
+  margin: 0 auto;
+}
+
+.modalDescription2 {
+  padding: 30px 0 0 0;
+  width: 90%;
+  margin: 0 auto;
 }
 
 #pageTop {
