--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -135,10 +135,11 @@ h1.ballet-heading {
   top: 450px;
   left: 50%;
   transform: translate(-50%, -50%);
-  z-index: -1;
+  /* z-index: -1; */
   display: flex;
   align-items: center;
   justify-content: center;
+  overflow: scroll;
 }
 
 #contentsWrap {
