--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -97,35 +97,7 @@ header {
   display: none;
 }
 
-.logoArea {
-  width: 400px;
-  height: 300px;
-  /* background-color: aqua; */
-}
-
-.handDeco {
-  /* width: 300px; */
-  /* height: 300px; */
-  position: absolute;
-  top: 100px;
-  /* background-color: rgb(80, 123, 160); */
-}
-
-h1.ballet-heading {
-  font-size: 2rem;
-  position: absolute;
-  top: 180px;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.heading-bigger {
-  font-size: 3rem;
-  position: absolute;
-  left: 20%;
-}
-
-.fixed-box {
+.fixedBox {
   background-color: white;
   border-radius: 70px;
   border: solid #666666 2px;
@@ -142,13 +114,52 @@ h1.ballet-heading {
   overflow: scroll;
 }
 
+/* モーダルのスクロールバー非表示 */
+
+/* （Edge・Firefox） */
+
+.fixedBox {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+/* （Chrome・Safari） */
+
+.fixedBox::-webkit-scrollbar {
+  display: none;
+}
+
+/* ============ */
+
+.logoArea {
+  height: 600px;
+}
+
+.handDeco {
+  position: absolute;
+  top: 50px;
+}
+
+h1.ballet-heading {
+  font-size: 2rem;
+  position: absolute;
+  top: 80px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.heading-bigger {
+  font-size: 3rem;
+  position: absolute;
+  left: 20%;
+}
+
 #contentsWrap {
   width: 330px;
   margin: 0 auto;
 }
 
 .contentsArea {
-  /* background-color: antiquewhite; */
   width: 100%;
   padding: 40px 0;
 }
@@ -162,6 +173,14 @@ h1.ballet-heading {
   line-height: 35px;
   margin: 0 auto;
   margin-bottom: 20px;
+}
+
+.thumbnailItem {
+  border-bottom: none;
+}
+
+.thumbnailItem:nth-child(3) {
+  border-bottom: solid #666666 1px;
 }
 
 .modalOpen {
@@ -211,8 +230,6 @@ h1.ballet-heading {
   max-height: 650px;
   padding: 20px;
   overflow: scroll;
-  -ms-overflow-style: none;
-  scrollbar-width: none;
 }
 
 /* モーダルのスクロールバー非表示 */
