--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -199,6 +199,9 @@ h1.ballet-heading {
   border-left: solid #666666 2px;
   width: 100%;
   padding: 0 10px;
+  /* display: flex; */
+  /* flex-direction: column; */
+  /* justify-content: left; */
 }
 
 .thumbnailTitle {
@@ -220,6 +223,9 @@ h1.ballet-heading {
   z-index: 1000;
   justify-content: center;
   align-items: center;
+
+  width: 100%;
+  height: 100%;
 }
 
 .modalBox {
@@ -286,20 +292,20 @@ h1.ballet-heading {
 }
 
 /* .scroll {
-  text-align: center;
-  position: relative;
+ text-align: center;
+ position: relative;
 }
 
 .scroll::after {
-  content: '';
-  width: 2px;
-  height: 20px;
-  background-color: #666666;
+ content: '';
+ width: 2px;
+ height: 20px;
+ background-color: #666666;
 
-  position: absolute;
-  top: 100%;
-  left: 50%;
-  transform: translate(-50%);
+ position: absolute;
+ top: 100%;
+ left: 50%;
+ transform: translate(-50%);
 } */
 
 .modalDescription1 {
