--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -332,3 +332,10 @@ h1.ballet-heading {
 #drawer-checkbox {
   display: none;
 }
+
+footer {
+  position: absolute;
+  bottom: 0px;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
