--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -33,7 +33,7 @@ a:hover {
   padding: 20px 0;
 }
 
-.tag-btn {
+.tagBtn {
   display: inline-block;
   border-radius: 80px;
   border: solid #666666 2px;
@@ -220,7 +220,7 @@ h1.ballet-heading {
   display: none;
   position: fixed;
   inset: 0; /* 上下左右すべて「0」位置 */
-  z-index: 1000;
+  z-index: 900;
   justify-content: center;
   align-items: center;
 
@@ -329,8 +329,42 @@ h1.ballet-heading {
 }
 
 /* drawer */
-#drawer-checkbox {
+
+#drawerCheckbox {
   display: none;
+}
+
+#drawerClose {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background: rgba(0, 0, 0, 0.2);
+  z-index: 600;
+}
+
+#drawerCheckbox:checked ~ #drawerClose,
+#drawerCheckbox:checked ~ #gNavi {
+  display: block;
+}
+
+#gNavi {
+  font-size: 1.3rem;
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 400px;
+  background: #fff;
+  transition: right 0.8s ease;
+  z-index: 1000;
+  padding-top: 100px;
+}
+
+.gNaviItem {
+  margin: 20px 0;
+  text-align: center;
 }
 
 footer {
