--- a/css/style-newdesign.css
+++ b/css/style-newdesign.css
@@ -354,7 +354,8 @@ h1.ballet-heading {
   font-size: 1.3rem;
   position: fixed;
   top: 0;
-  width: 100%;
+  left: 0;
+  width: 100vw;
   height: 400px;
   background: #fff;
   transition: right 0.8s ease;
